// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZcashBalance renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="stretch"
  container={true}
  direction="row"
  justify="flex-start"
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Typography))
        className="title-mock"
        variant="body2"
      >
        Available
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Memo(WithStyles(UsdBalance))
          value={"3243.25"}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="zec-mock"
        item={true}
      >
        <Memo(WithStyles(ZecBalance))
          value={"12.323212"}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <ForwardRef(Grow)
    in={false}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Grid))
        alignItems="flex-start"
        className="lockedRoot-mock"
        container={true}
        direction="column"
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
          item={true}
        >
          <WithStyles(ForwardRef(Typography))
            className="lockedTitle-mock"
            display="inline"
            variant="caption"
          >
            Locked
          </WithStyles(ForwardRef(Typography))>
          <Memo(WithStyles(Tooltip))
            placement="bottom"
            title="Because of the network's consensus requirements funds may be locked while your message is being broadcasted."
          >
            <InfoOutlinedIcon
              className="icon-mock"
            />
          </Memo(WithStyles(Tooltip))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Typography))
          variant="caption"
        >
          + 
          0.00
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Grid))
          className="zec-mock"
          item={true}
        >
          <WithStyles(ForwardRef(Typography))
            variant="caption"
          >
            + 
            0.000000
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </ForwardRef(Grow)>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ZcashBalance renders when balanced locked 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="stretch"
  container={true}
  direction="row"
  justify="flex-start"
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Typography))
        className="title-mock"
        variant="body2"
      >
        Available
      </WithStyles(ForwardRef(Typography))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <Memo(WithStyles(UsdBalance))
          value={"0"}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="zec-mock"
        item={true}
      >
        <Memo(WithStyles(ZecBalance))
          value={"0"}
        />
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
  <ForwardRef(Grow)
    in={true}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <WithStyles(ForwardRef(Grid))
        alignItems="flex-start"
        className="lockedRoot-mock"
        container={true}
        direction="column"
        justify="space-between"
      >
        <WithStyles(ForwardRef(Grid))
          alignItems="center"
          container={true}
          item={true}
        >
          <WithStyles(ForwardRef(Typography))
            className="lockedTitle-mock"
            display="inline"
            variant="caption"
          >
            Locked
          </WithStyles(ForwardRef(Typography))>
          <Memo(WithStyles(Tooltip))
            placement="bottom"
            title="Because of the network's consensus requirements funds may be locked while your message is being broadcasted."
          >
            <InfoOutlinedIcon
              className="icon-mock"
            />
          </Memo(WithStyles(Tooltip))>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Typography))
          variant="caption"
        >
          + 
          3,243.25
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Grid))
          className="zec-mock"
          item={true}
        >
          <WithStyles(ForwardRef(Typography))
            variant="caption"
          >
            + 
            12.323212
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </ForwardRef(Grow)>
</WithStyles(ForwardRef(Grid))>
`;
